--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -16,8 +16,6 @@ header {
 
 // Style for the phone number link
 .phone-link {
-  color: rgb(255, 0, 0);
-  text-decoration: none;
   font-size: 25px;
   padding-right: 1px;
 }
@@ -53,7 +51,7 @@ html body div#navWrapper nav ul#primaryNav {
 }
 
 nav ul li.active a {
-  background-color: #ea0000;
+  background-color: #ff6161;
   color: #000000;
 }
 
