--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -49,7 +49,7 @@ header {
 }
 
 .phone-link {
-  color: #ea0000;
+  color: #ff6161;
   text-decoration: none;
   font-size: 1.1rem;
   white-space: nowrap;
@@ -319,6 +319,7 @@ div.reviewWrapper div#cards section div img {
 // ----START OF FOOTER---- //
 footer {
   border-top: 1px solid black;
+  color: white;
   text-align: center;
   background-color: #ea0000;
   margin: 0;
